--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href=""><img alt="GraphSQL" src="img/logo_0.png"></a>
+      <a class="navbar-brand" href=""><!--img alt="GraphSQL" src="img/logo_0.png"-->GraphSQL</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -50,7 +50,7 @@
 
   <div class="row">
     <!-- Begin Right Side -->
-    <div id="right_side" class="col-md-8" style="">
+    <div id="right_side" class="col-md-8" style="border-style:double;border-color: #ecebe7;">
       <div class="row">
         <div class="col-md-4"> 
           <div class="input-group">
@@ -96,7 +96,7 @@
       <div class="row">
         <!-- Tabs Area-->
         <div id="viewport" class="col-md-12"> 
-          <div role="tabpanel" id="tapView">
+          <div role="tabpanel" id="tapView" >
 
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
@@ -162,9 +162,9 @@
 
     <!-- Begin Left Side -->
     <div id='left_side' class="col-md-4" style=""> 
-      <div id="layoutport" class="row" style="width:100%;">
+      <div id="layoutport" class="row" style="border-style:double;border-color: #ecebe7;">
         <div class="row">
-          <div class="col-md-6 col-md-offset-6" >
+          <div class="col-md-4 col-md-offset-8">
             <a id="layoutDropdown" href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <button class="btn btn-info">
                 Graph Layout
@@ -180,22 +180,25 @@
           </div>
         </div>
         <!-- Layout Port -->
-        <div class="row" style="background-color:#ecebe7;border-style:solid;border-color: #ecebe7; ">
-          <div id="layoutProperty" style="width:95%;" align="right">
+        <div class="row" >
+          <div class="col-md-10 col-md-offset-1" style="background-color:#ecebe7;"> <!-- border-style:solid;border-color: #ecebe7; -->
+            <div id="layoutProperty" align="right">
+            </div>
           </div>
         </div>
       </div>
 
-      <br/>
+      
 
-      <div id="tableBox" class="row" style="width:100%;overflow:auto;">  
+      <div id="tableBox" class="row" style="overflow:auto;border-style:double;border-color: #ecebe7;">  
+        <br/>
         <table class="table table-hover table-bordered" id="tableInformation">
           <tr>
             <th>Element Type</th>
             <th>Attribute Name</th> 
             <th>Attribute Value</th>
           </tr>
-        </table>
+        </table> 
       </div>
     </div>
     <!-- End Right Side -->
