--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
   </div>
   <!-- Row 1 -->
 
-  <div id='bodyRow_hr' class="row" style="margin-left:0px;width:100%;height:1px; background-color: #ecebe7;margin-top:10px;margin-bottom:19px">
+  <div id='bodyRow_hr' class="row" style="margin-left:0px;margin-right:0px;width:100%;height:1px; background-color: #9ecae1;margin-top:10px;margin-bottom:19px">
   </div>
 
   <!-- Visulization Component -->  
