[PDM-58]Setting up the UI componenet for the new visualization libarary.

--- a/src/visualization/www/index.html
+++ b/src/visualization/www/index.html
@@ -122,7 +122,7 @@
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation" class="active" ><a href="#graph" aria-controls="graph" role="tab" data-toggle="tab" ><span id="visualization_label_id"></span></a></li>
               <li role="presentation"><a href="#json" aria-controls="json" role="tab" data-toggle="tab" ><span id="jsonmessage_label_id"></span></a></li>
-              <li role="presentation"><a href="#summary" aria-controls="summary" role="tab" data-toggle="tab"><span id="graphinformation_label_id"></span></a></li>
+              <!--li role="presentation"><a href="#summary" aria-controls="summary" role="tab" data-toggle="tab"><span id="graphinformation_label_id"></span></a></li -->
               <!--li role="presentation"><a href="#more" aria-controls="more" role="tab" data-toggle="tab">More ...</a></li-->
             </ul>
 
