hide label filter.

--- a/src/visualization/www/index.html
+++ b/src/visualization/www/index.html
@@ -54,7 +54,7 @@
   <div id='bodyRow_3' class="row">
     <!-- Begin Left Side -->
     <div id="left_side" class="col-md-9" style="">
-      <div class="row" style="margin-bottom:19px">
+      <div class="row" style="margin-bottom:19px;display:none;">
         <div class="col-md-4"> 
           <div class="input-group">
             <!--span class="input-group-addon">Node Labels: </span-->
