--- a/src/visualization/www/index.html
+++ b/src/visualization/www/index.html
@@ -182,7 +182,7 @@
 
     <!-- Begin Right Side -->
     <div id='right_side' class="col-md-3" style=""> 
-      <div id="layoutport" class="row" style="background-color:#ecebe7;">
+      <div id="layoutport" class="row" style="background-color:#ecebe7;display:none">
         <div class="row">
           <div class="col-md-4 col-md-offset-4" align="center">
             <a id="layoutDropdown" href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
