--- a/src/visualization/www/index.html
+++ b/src/visualization/www/index.html
@@ -132,7 +132,7 @@
               <div role="tabpanel" class="tab-pane fade in active" id="graph">
                 <br />
                 <div align='left' id="prototype1" style="float:left;width:100%;">
-                </div>
+                </div><div id="info"></div>
                 <!--iframe id="desc_iframe" src="desc.html"></iframe-->
                 <!--pre id="desc_iframe" style="float:left;overflow:auto; margin-left:5px"></pre-->
 
