--- a/cip/cip_frontend/client/index.html
+++ b/cip/cip_frontend/client/index.html
@@ -10,13 +10,22 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+
+    <title>CIP</title>
+
+    <!-- Google Open Sans -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
+      <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+      <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
-      <link rel="stylesheet" href="app/app.css">
+      <link href="app/app.css" rel="stylesheet">
+      <link href="template/styles/animate.css" rel="stylesheet">
+      <link href="template/styles/style.css" rel="stylesheet">
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
@@ -27,9 +36,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <navbar></navbar>
-    <div ui-view=""></div>
-    <footer></footer>
+    <!-- <navbar></navbar> -->
+    <div ui-view></div>
+    <!-- <footer></footer> -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -57,10 +66,21 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
+      <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/angular-messages/angular-messages.js"></script>
+      <script src="bower_components/angular-aria/angular-aria.js"></script>
+      <script src="bower_components/moment/moment.js"></script>
+      <script src="bower_components/pace/pace.js"></script>
+      <script src="bower_components/metisMenu/dist/metisMenu.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
+
+      <!-- Custom and plugin javascript -->
+      <script src="template/scripts/inspinia.js"></script>
+      <script src="template/scripts/directives.js"></script>
+      <script src="template/scripts/controllers.js"></script>
       <!-- injector:js -->
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
