--- a/cip/cip_frontend/client/index.html
+++ b/cip/cip_frontend/client/index.html
@@ -69,6 +69,7 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-messages/angular-messages.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
+      <script src="bower_components/angular-translate/angular-translate.min.js"></script>
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/pace/pace.js"></script>
       <script src="bower_components/metisMenu/dist/metisMenu.js"></script>
@@ -78,9 +79,12 @@
       <script src="app/app.js"></script>
 
       <!-- Custom and plugin javascript -->
+      <script src="template/scripts/translations.js"></script>
       <script src="template/scripts/inspinia.js"></script>
       <script src="template/scripts/directives.js"></script>
+
       <script src="template/scripts/controllers.js"></script>
+      
       <!-- injector:js -->
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
