--- a/cip/cip_frontend/client/index.html
+++ b/cip/cip_frontend/client/index.html
@@ -69,7 +69,7 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-messages/angular-messages.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
-      <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+      <script src="bower_components/angular-translate/angular-translate.js"></script>
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/pace/pace.js"></script>
       <script src="bower_components/metisMenu/dist/metisMenu.js"></script>
@@ -82,22 +82,28 @@
       <script src="template/scripts/translations.js"></script>
       <script src="template/scripts/inspinia.js"></script>
       <script src="template/scripts/directives.js"></script>
-
       <script src="template/scripts/controllers.js"></script>
+
+
+      <script src="app/crowd/crowd.service.js"></script>
+      <script src="app/crowd/crowd.controller.js"></script>      
+
       
       <!-- injector:js -->
-      <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
+      <script src="app/admin/admin.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/auth.service.js"></script>
+      <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/crowd/crowd.controller.js"></script>
+      <script src="app/crowd/crowd.service.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
-      <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
@@ -106,7 +112,7 @@
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
-      <script src="app/account/signup/signup.controller.js"></script>
+      <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
