--- a/cip/cip_frontend/client/app/crowd/crowd.create.html
+++ b/cip/cip_frontend/client/app/crowd/crowd.create.html
@@ -211,5 +211,96 @@
                 ng-click="addFactor(factors.condition)" class="btn btn-info btn-block">添加条件
         </button>
     </div>
-  </fieldset>
+    </fieldset>
+
+    <fieldset>
+    <!-- Show -->
+    <legend>条件列表</legend>
+
+    <table class="table table-hover" ng-if="crowdDetail.selector.ontology.length>0 || crowdDetail.selector.behavior.length>0 || crowdDetail.selector.tag.length>0">
+        <thead>
+        <tr>
+            <th>序号</th>
+            <th>圈人条件</th>
+            <th>覆盖人数</th>
+            <th>操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr data-ng-repeat="condition in crowdDetail.selector.tag">
+            <td>{{$index+1}}</td>
+            <td>{{condition_type[0].name}}:&nbsp;&nbsp;<b>{{condition.name}} {{condition.operator}} {{condition.factor}}</b></td>
+            <td><span ng-if="condition.count == -1" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+                <span ng-if="condition.count == -2">条件搜索失败,请重试</span>
+                <span ng-if="condition.count >= 0">{{condition.count}}</span>
+            </td>
+            <td>
+                <span>
+                  <button class="btn btn-danger btn-xs"
+                          data-ng-click="deleteFactor(crowdDetail.selector.tag, $index);">删除此条件
+                  </button>
+                </span>
+            </td>
+        </tr>
+        <tr data-ng-repeat="condition in crowdDetail.selector.ontology">
+            <td>{{$index+1+crowdDetail.selector.tag.length}}</td>
+            <td ng-if="condition.operator!='dislike' && condition.operator!='like'">
+                {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣的权重 <b>{{condition.operator}} {{condition.weight}}</b>
+            </td>
+            <td ng-if="condition.operator=='dislike' || condition.operator=='like'">
+                {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣为 <b>{{condition.operator}}</b>
+            </td>
+            <td><span ng-if="condition.count == -1" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+                <span ng-if="condition.count == -2">条件搜索失败,请重试</span>
+                <span ng-if="condition.count >= 0">{{condition.count}}</span>
+            <td>
+                <span>
+                  <button class="btn btn-danger btn-xs"
+                          data-ng-click="deleteFactor(crowdDetail.selector.ontology, $index);">删除此条件
+                  </button>
+                </span>
+            </td>
+        </tr>
+        <tr data-ng-repeat="condition in crowdDetail.selector.behavior">
+            <td>{{$index+1+crowdDetail.selector.tag.length+crowdDetail.selector.ontology.length}}</td>
+            <td>
+                {{condition_type[2].name}}:&nbsp;&nbsp;<b>{{condition.action}}</b>&nbsp;<b>{{condition.objectCategory}}</b>
+                <nobr ng-if="condition.objectType=='Category'">&nbsp;&nbsp;位于<b>{{condition.ontologyType}}/{{condition.objectId}}</b>目录下</nobr>
+                <nobr ng-if="condition.objectType=='Contains'">&nbsp;&nbsp;包含字段<b>{{condition.ontologyType}}/{{condition.objectId}}</b></nobr>
+                <nobr ng-if="condition.objectType=='Item'">&nbsp;&nbsp;物品ID=<b>{{condition.objectId}}</b></nobr>
+                &nbsp;&nbsp;发生次数 <b>{{condition.operator}} {{condition.value}}</b>次
+                <nobr ng-if="condition.timeType=='absolute'">&nbsp;&nbsp;在日期<b>{{condition.startTime | date:'shortDate'}}</b>到<b>{{condition.endTime | date:'shortDate'}}</b>内</nobr>
+                <nobr ng-if="condition.timeType=='day'">&nbsp;&nbsp;在过去<b>{{condition.startTime/86400000}}</b>天内</nobr>
+                <nobr ng-if="condition.timeType=='hour'">&nbsp;&nbsp;在过去<b>{{condition.startTime/3600000}}</b>小时内</nobr>
+            </td>
+            <td><span ng-if="condition.count == -1" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+                <span ng-if="condition.count == -2">条件搜索失败,请重试</span>
+                <span ng-if="condition.count >= 0">{{condition.count}}</span>
+            <td>
+                <span>
+                  <button class="btn btn-danger btn-xs"
+                          data-ng-click="deleteFactor(crowdDetail.selector.behavior, $index);">删除此条件
+                  </button>
+                </span>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div class="col-md-offset-8 col-md-3" ng-if="crowdDetail.selector.ontology.length>0 || crowdDetail.selector.behavior.length>0 || crowdDetail.selector.tag.length>0">
+        <h5 ng-if="crowdDetail.count >= -1">满足上面所有条件的人数为
+            <span ng-if="crowdDetail.count >= 0">{{crowdDetail.count}}</span>
+            <span ng-if="crowdDetail.count == -1" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+            人</h5>
+        <h5 ng-if="crowdDetail.count == -2">
+            全部人数获取失败,请重试条件
+        </h5>
+    </div>
+    </fieldset>
+
+    <div class="form-group">
+    <div class="col-md-offset-4 col-md-3">
+        <button mean-token="'create-save'" type="button" ng-click="goToSaveCrowd()" ng-disabled="crowdDetail.selector.behavior.length <=0 && crowdDetail.selector.ontology.length<=0 && crowdDetail.selector.tag.length<=0 || crowdDetail.count < 0" class="btn btn-info btn-block">保存人群</button>
+    </div>
+    </div>
 </div>
