--- a/cip/cip_frontend/client/index.html
+++ b/cip/cip_frontend/client/index.html
@@ -63,9 +63,14 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+      <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
+      
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
+      <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
+      <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.min.css">
+
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-messages/angular-messages.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
