--- a/cip/cip_frontend/client/index.html
+++ b/cip/cip_frontend/client/index.html
@@ -18,6 +18,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
+      <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
       <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
       <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.css" />
       <!-- endbower -->
@@ -63,14 +64,10 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
-      
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-ui-select/dist/select.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
-      <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
-      <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.min.css">
-
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-messages/angular-messages.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
